# tsundokensaku

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  submission.md
.claude/: settings.local.json.tmp.21624.9c2edb647eb5
docs/: ai-artifact-return-discovery.md  ai-export-optimization-design.md  export-events-design.md  export-profile-naming-plan.md  export-profile-naming-review.md  pack-design.md  pack-item-identity-design.md  phase3c-3d-design-review.md  phase3c-ui-analysis.md  phase3c-ui-notes.md  phase4-artifact-return-design.md  thumbnail-improvement-plan.md  usage-history-discovery.md  workspace-ui-information-architecture.md
scripts/: README.md  README_import_books_from_cosense.md  benchmark_thumbnail.py  cloudflare_tunnel.sh  dev.sh  export_pdf_pages.py  import_books_from_cosense.py  notify_email.py  reindex_pdf_pages.py
static/: export-cart.js  pack-store.js  pages-spec.js  pdf-modal.js
templates/: _settings_sidebar.html  artifacts.html  base.html  home.html  manage.html  pack_list.html  pdf_viewer.html  search.html  settings.html  settings_index.html  settings_info.html  settings_share.html  workspace.html
tests/: test_actions.py  test_cli.py  test_database.py  test_export_pdf_pages.py  test_export_profiles.py  test_export_stats.py  test_indexer.py  test_markdown_export.py  test_metadata.py  test_pdf_extract.py  test_pdf_outline.py  test_pdf_thumbnail.py  test_token_estimate.py  test_tokenizer.py  test_web.py  (+1 more)
(+27 files in other folders)
