[project]
name = "tsundokensaku"
version = "0.1.0"
description = "Personal local PDF full-text search for technical books."
requires-python = ">=3.10"
dependencies = [
  "pypdf>=6.0",
]

[project.scripts]
tsundokensaku = "tsundokensaku.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
