[project]
name = "tsundokensaku"
version = "0.1.0"
description = "Personal local PDF full-text search for technical books."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "pypdf>=6.0",
  "jinja2>=3.1",
  "uvicorn>=0.30",
]

[project.scripts]
tsundokensaku = "tsundokensaku.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
